--- a/products.html
+++ b/products.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BYOCuisine Products</title>
-    <link rel="icon" href="images/favicon.png" type="image/x-icon">
+    <link rel="icon" href="favicon.png" type="image/x-icon">
     </title>
     <style>
         body {
@@ -135,48 +135,48 @@
     </div>
     <div class="main-content">
         <div class="cart" onclick="goToCart()">
-            <img src="images/cart.png" alt="Cart">
+            <img src="cart.png" alt="Cart">
             <span id="cart-counter">0</span>
         </div>
         <div class="header">BYOCuisine Kits</div>
         <div class="products-container">
             <div class="product-card">
-                <img src="images/pasta.jpg" alt="Italian Pasta Kit">
+                <img src="pasta.jpg" alt="Italian Pasta Kit">
                 <h2>Italian Pasta Kit</h2>
                 <p>Everything you need to make authentic Italian pasta at home.</p>
                 <div class="price">$24.99</div>
                 <button onclick="addToCart()">Add to Cart</button>
             </div>
             <div class="product-card">
-                <img src="images/sushi.jpg" alt="Sushi Making Kit">
+                <img src="sushi.jpg" alt="Sushi Making Kit">
                 <h2>Sushi Making Kit</h2>
                 <p>Includes all the essentials for crafting delicious sushi rolls.</p>
                 <div class="price">$29.99</div>
                 <button onclick="addToCart()">Add to Cart</button>
             </div>
             <div class="product-card">
-                <img src="images/taco.jpg" alt="Mexican Taco Kit">
+                <img src="taco.jpg" alt="Mexican Taco Kit">
                 <h2>Mexican Taco Kit</h2>
                 <p>Authentic ingredients for making mouthwatering tacos.</p>
                 <div class="price">$19.99</div>
                 <button onclick="addToCart()">Add to Cart</button>
             </div>
             <div class="product-card">
-                <img src="images/curry.jpg" alt="Indian Curry Kit">
+                <img src="curry.jpg" alt="Indian Curry Kit">
                 <h2>Indian Curry Kit</h2>
                 <p>All the spices and ingredients needed for a flavorful Indian curry.</p>
                 <div class="price">$22.99</div>
                 <button onclick="addToCart()">Add to Cart</button>
             </div>
             <div class="product-card">
-                <img src="images/crepe.jpg" alt="French Crepe Kit">
+                <img src="crepe.jpg" alt="French Crepe Kit">
                 <h2>French Crepe Kit</h2>
                 <p>Master the art of French baking with this premium kit.</p>
                 <div class="price">$34.99</div>
                 <button onclick="addToCart()">Add to Cart</button>
             </div>
             <div class="product-card">
-                <img src="images/chinese.jpg" alt="Chinese Stir-Fry Kit">
+                <img src="chinese.jpg" alt="Chinese Stir-Fry Kit">
                 <h2>Chinese Stir-Fry Kit</h2>
                 <p>Essential sauces and ingredients for making a delicious stir-fry.</p>
                 <div class="price">$27.99</div>
