--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BYOCuisine Kits</title>
-    <link rel="icon" href="images/favicon.png" type="image/x-icon">
-    <link rel="preload" as="image" href="images/background.jpg">
+    <link rel="icon" href="favicon.png" type="image/x-icon">
+    <link rel="preload" as="image" href="background.jpg">
     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
             margin: 0;
             padding: 0;
-            background-image: url('images/background.jpg');
+            background-image: url('background.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -112,7 +112,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="images/BYOCK logo.png" alt="Logo">
+        <img src="BYOCK logo.png" alt="Logo">
         BYOCuisine Kits
     </div>
     <div class="divider"></div>
@@ -120,7 +120,7 @@
         <div class="kit-grid">
             <div class="kit-item">
                 <div class="kit" data-title="Italian Pasta Kit">
-                    <img src="images/pasta.jpg" alt="Italian Pasta Kit">
+                    <img src="pasta.jpg" alt="Italian Pasta Kit">
                 </div>
                 <div class="kit-description">
                     <span class="kit-name"><u>Italian Pasta Kit</u></span><br>
@@ -129,7 +129,7 @@
             </div>
             <div class="kit-item">
                 <div class="kit" data-title="Japanese Sushi Kit">
-                    <img src="images/sushi.jpg" alt="Japanese Sushi Kit">
+                    <img src="sushi.jpg" alt="Japanese Sushi Kit">
                 </div>
                 <div class="kit-description">
                     <span class="kit-name"><u>Japanese Sushi Kit</u></span><br>
@@ -138,7 +138,7 @@
             </div>
             <div class="kit-item">
                 <div class="kit" data-title="Mexican Taco Kit">
-                    <img src="images/taco.jpg" alt="Mexican Taco Kit">
+                    <img src="taco.jpg" alt="Mexican Taco Kit">
                 </div>
                 <div class="kit-description">
                     <span class="kit-name"><u>Mexican Taco Kit</u></span><br>
@@ -147,7 +147,7 @@
             </div>
             <div class="kit-item">
                 <div class="kit" data-title="Indian Curry Kit">
-                    <img src="images/curry.jpg" alt="Indian Curry Kit">
+                    <img src="curry.jpg" alt="Indian Curry Kit">
                 </div>
                 <div class="kit-description">
                     <span class="kit-name"><u>Indian Curry Kit</u></span><br>
@@ -156,7 +156,7 @@
             </div>
             <div class="kit-item">
                 <div class="kit" data-title="French Crepe Kit">
-                    <img src="images/crepe.jpg" alt="French Crepe Kit">
+                    <img src="crepe.jpg" alt="French Crepe Kit">
                 </div>
                 <div class="kit-description">
                     <span class="kit-name"><u>French Crepe Kit</u></span><br>
@@ -165,7 +165,7 @@
             </div>
             <div class="kit-item">
                 <div class="kit" data-title="Chinese Stir-Fry Kit">
-                    <img src="images/chinese.jpg" alt="Chinese Stir-Fry Kit">
+                    <img src="chinese.jpg" alt="Chinese Stir-Fry Kit">
                 </div>
                 <div class="kit-description">
                     <span class="kit-name"><u>Chinese Stir-Fry Kit</u></span><br>
