--- a/login.html
+++ b/login.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BYOCuisine Login</title>
-    <link rel="icon" href="images/favicon.png" type="image/x-icon">
-    <link rel="preload" as="image" href="images/login-background.jpg">
+    <link rel="icon" href="favicon.png" type="image/x-icon">
+    <link rel="preload" as="image" href="login-background.jpg">
     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
             margin: 0;
             padding: 0;
-            background-image: url('images/login-background.jpg');
+            background-image: url('login-background.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
