--- a/products.html
+++ b/products.html
@@ -131,7 +131,7 @@
 <body>
     <div class="sidebar">
         <a href="products.html">All Items</a>
-        <a href="landing.html" onclick="logout()">Logout</a>
+        <a href="index.html" onclick="logout()">Logout</a>
     </div>
     <div class="main-content">
         <div class="cart" onclick="goToCart()">
